src/components/markdown/markdown.css
.md {
  @apply .mb-6;

  &:last-of-type {
    /* Remove bottom margin on the last item in a grid */
    @apply .mb-0;
  }

  @media (min-width: 768px) {
    @apply .mb-0;
  }

  & h2 {
    /* The Main Title */
    @apply .text-xl .font-semibold .mb-4 .leading-tight .text-brand-black;

    @media (min-width: 1024px) {
      @apply .text-2xl .leading-relaxed;
    }
  }

  & h3 {
    /* Highlighted 'Intro' Copy */
    @apply .text-base .text-brand-black .mt-8;

    + p {
      @apply .mt-8;
    }

    @media (min-width: 1024px) {
      @apply .text-lg .leading-relaxed;
    }
  }

  & h4 {
    /* Small Sub Headings */
    @apply .text-xs .text-brand-gray-600 .tracking-wide .mb-2;

    @media (min-width: 1024px) {
      @apply .text-sm .leading-relaxed;
    }
  }

  & p {
    /* Primary Copy */
    @apply .text-sm .tracking-wide;

    @media (min-width: 1024px) {
      @apply .text-base .leading-relaxed;
    }

    & + h4 {
      @apply .mt-4;
    }
  }

  & ol {
    /* Not displayed at lists, but we force two columns */
    @apply .text-sm .tracking-wide;
    display: grid;
    grid-template-columns: 1fr 1fr;

    @media (min-width: 768px) {
      display: block;
    }

    @media (min-width: 1024px) {
      @apply .text-base .leading-relaxed;
    }
  }
}

